# testing-env

./: .gitmodules  README.md
cpp-testing/codecoverage/: CMakeLists.txt  lib.h  lib_test.cpp
cpp-testing/codecoverage/cmake/: fastcov.py
cpp-testing/interface/: common-interface.h  specialized1.h  specialized2.h
cpp_type_cast_testing/: cpp_type_cast_testing.sln
cpp_type_cast_testing/cpp_type_cast_testing/: cpp_type_cast_testing.cpp  cpp_type_cast_testing.vcxproj  cpp_type_cast_testing.vcxproj.filters
